# corpora_stats

./: .gitignore  README.md  pyproject.toml
src/corpora_stats/: __main__.py  all_documents.py  document.py  stats.py  utils.py
