[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[project]
name = "corpora_stats"
authors = [{ name = "Samuel Larkin", email = "Samuel.Larkin@cnrc-nrc.gc.ca" }]
description = "A tool to get corpora statistics"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["NLP", "CLI"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Environment :: Other Environment",
  "Environment :: X11 Applications",
  "Framework :: IPython",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Other Audience",
  "Intended Audience :: Science/Research",
  "Operating System :: POSIX :: BSD :: FreeBSD",
  "Operating System :: POSIX :: BSD",
  "Operating System :: POSIX :: Linux",
  "Operating System :: POSIX :: SunOS/Solaris",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation",
  "Programming Language :: Python",
  "Programming Language :: Unix Shell",
  "Topic :: System :: Installation/Setup",
  "Topic :: Terminals",
  "Topic :: System :: Shells",
  "Topic :: Utilities",
  "Topic :: Software Development :: User Interfaces",
  "Topic :: System :: Shells",
  "Typing :: Typed",
]
dependencies = [
  "click",
  "click-default-group",
  "dataclasses-json",
  "tabulate",
  "xopen",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
  "build",
  "isort",
  "mypy",
  "pandas-stubs",
  "ruff",
  "types-tabulate",
  "types-tqdm",
]
debug = ["pudb"]

[project.scripts]
corpora-stats = "corpora_stats.__main__:cli"

[project.urls]
repository = "https://github.com/SamuelLarkin/corpora_stats"

[tool.mypy]
files = "src"
